--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
   display: none;                 /* hide by default */
   flex: 1;
   border-radius: 20px;           /* smooth rounded corners */
-  background: #ffffff;
+  background: #c5ffe8;
   box-shadow: inset 0 2px 6px rgba(0,0,0,0.05);
   padding: 30px;
   min-height: 75vh;              /* fills most of right area */
@@ -76,9 +76,3 @@ body {
 .tab-background.active {
   display: block;                /* show only active tab */
 }
-
-
-
-
-
-
