--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   max-width: 100% !important;
   border: 2px solid #d1d5db;
   border-radius: 16px;
-  background: rgba(21, 41, 75, 0.35);
+  background: rgba(159, 185, 230, 0.35);
   box-sizing: border-box;
   display: block;
 }
@@ -30,7 +30,7 @@
   max-width: 100% !important;
   border: 2px solid #d1d5db;
   border-radius: 16px;
-  background: rgba(21, 41, 75, 0.35);
+  background-color: rgba(159, 185, 230, 0.35);
   box-sizing: border-box;
   display: block;
 }
@@ -161,6 +161,8 @@ body {
   width: 100%;
   margin-bottom: 20px;
   min-height: 350px;
+
+
 }
 
 .chart-wrapper button {
@@ -198,7 +200,7 @@ body {
   max-width: 100% !important;
   border: 2px solid #d1d5db;
   border-radius: 16px;
-  background: rgba(21, 41, 75, 0.35);
+  background-color: rgba(159, 185, 230, 0.35);
   box-sizing: border-box;
   display: block;
 }
@@ -210,7 +212,7 @@ body {
   max-width: 100% !important;
   border: 2px solid #d1d5db;
   border-radius: 16px;
-  background: rgba(21, 41, 75, 0.35);
+  background-color: rgba(159, 185, 230, 0.35);
   box-sizing: border-box;
   display: block;
 }
